# morning-paper-bot

./: .env.example  .gitignore  README.md  digest.py  prompt.txt  pyproject.toml  sources.toml  test_digest.py
.github/workflows/: ci.yml  daily.yml
